--- a/style.css
+++ b/style.css
@@ -10,43 +10,135 @@ body{
 }
 
 .contain{
-    margin-left: 10px;
     display: absolute;
     justify-content: space-around;
-    width: 99%;
+    width: 90%;
+    height: auto;
+    transform: translateX(-50%);
+    margin-left: 50%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(20px, auto);
+    background-color: rgba(128, 128, 128, 0.75);
+    border: 1px yellow solid;
+    padding-top: 5vh;
 }
 
-.item{
-    width: 24vw;
-    display: inline-block;
-    background-color: rgba(255, 255, 255, 0.39);
-    background-image: url(./fond.png);
-    background-size:contain;
-    background-repeat: none;
-    text-align:center;
-    margin-bottom: 5px;
-    border-radius: 15px;
-}
-
-.item img{
-    display: flex;
-    height: 80%;
-    width: 80%;
-    margin-top: 5%;
+.contain img{
+    height: 300px;
     margin-left: 50%;
     transform: translateX(-50%);
 }
 
-.item p{
+.capitaineText, .navigateurText, .charpentierText, .medecinText, .Nakama{
+    height: 30px;
+    font-size: 30px;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 130%;
-    margin-top: -10px;
     text-transform: uppercase;
-    margin-bottom: 5%;
-    text-shadow: 6px 4px 9px #7D7D7D
-    ;
+    font-weight: bold;
+}
+
+#capitaine{
+    grid-row: 2;
+    grid-column: 2;
+}
+.capitaineText{
+    grid-row: 1;
+    grid-column: 2;
+}
+
+.navigateurText{
+    grid-row: 3;
+    grid-column: 1;
+}
+
+#navigateur{
+    grid-row: 4;
+    grid-column: 1;
+}
+
+.charpentierText{
+    grid-row: 3;
+    grid-column: 2;
+}
+
+#charpentier{
+    grid-row: 4;
+    grid-column: 2;
+}
+
+.medecinText{
+    grid-row: 3;
+    grid-column: 3;
+}
+
+#medecin{
+    grid-row: 4;
+    grid-column: 3;
+}
+
+.Nakama{
+    grid-row: 5;
+    grid-column: 2;
+}
+
+#sabreur{
+    grid-row: 6;
+    grid-column: 1;
+}
+
+#membredeux{
+    grid-row: 6;
+    grid-column: 2;
+}
+
+#membreun{
+    grid-row: 6;
+    grid-column: 3;
+}
+
+#tireur{
+    grid-row: 7;
+    grid-column: 1;
+}
+
+#mink{
+    grid-row: 7;
+    grid-column: 2;
+}
+
+#fishmen{
+    grid-row: 7;
+    grid-column: 3;
+}
+
+#womanun{
+    grid-row: 8;
+    grid-column: 1;
+}
+
+#womandeux{
+    grid-row: 8;
+    grid-column: 2;
+}
+
+#boat{
+    grid-row: 8;
+    grid-column: 3;
+    margin-left: 50%;
+    transform: translateX(-70%);
+    height: 65%;
+}
+
+
+.item img{
+
+}
+
+.item p{
+
 }
 
 
